--- a/css/about.css
+++ b/css/about.css
@@ -501,12 +501,12 @@ section {
     align-items: flex-start; */
 /*     gap: 5vh; */
     min-height: 100vh;
-    width: 5000px;
+    width: 500px;
     /* overflow: hidden; */
 }
 
 #work .tit{
-    margin: 0 0 4vh 2%;
+    margin: 2% 0 4vh 2%;
     color: var(--white);
     font-family: var(--zen-dots);
     text-shadow: 0px 7px 0px var(--point-color);
