--- a/css/about.css
+++ b/css/about.css
@@ -68,6 +68,7 @@ a{
 
 .custom_cursor2.hover {
     transform: translate(-50%, -50%) scale(1.8);
+    background: url(../img/main/star_cursor_hover.svg) no-repeat center/contain;
 }
 
 .star-trail-svg{
