--- a/css/about.css
+++ b/css/about.css
@@ -105,9 +105,12 @@ section {
     width: 100%;
     height: 100%;
     object-fit: contain;
-    display: block;
+    display: none;
+    transition: .3s;
 }
-
+.menu img.on{
+    display: flex;
+}
 .menu_ul {
     display: none;
 }
@@ -128,6 +131,7 @@ section {
 
 .gnb li {
     background: var(--gray-eee);
+    color: var(--point-color);
     border: var(--border3);
     border-right: none;
     box-shadow: 9px 8px 0px 0px #000;
@@ -140,15 +144,6 @@ section {
     transform: translateY(0);
   }
   
-.gnb li:nth-child(odd){
-    background: var(--gray-eee);
-    color: var(--point-color);
-}
-.gnb li:nth-child(even){
-    color: var(--gray-eee);
-    background: var(--point-color);
-}
-
 .gnb li a {
     display: flex;
     justify-content: center;
@@ -707,10 +702,12 @@ section {
 }
 
 #about {
+    margin-top: 10vh;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    margin-bottom: 10vh;
 }
 
 #about .tit {
@@ -895,7 +892,6 @@ section {
     height: 60%;
     display: flex;
     flex-direction: column;
-    gap: 50px;
     position: relative;
     z-index: 10;
 }
@@ -938,12 +934,12 @@ section {
 #contact .cont_txt .top .cont h6 {
     color: var(--light-blue);
     font-size: clamp(18px, 2vw, 28px);
-    font-weight: 600;
+    font-weight: 300;
     letter-spacing: -1.5px;
 }
 
 #contact .cont_txt .bottom p {
-    padding-bottom: 60px;
+    padding-bottom: 40px;
     width: 50%;
     opacity: 80%;
 }
