--- a/tgif/css/brandstory_media.css
+++ b/tgif/css/brandstory_media.css
@@ -232,6 +232,9 @@
     .brand_history .txt .tit {
         font-size: 24px;
     }
+    .brand_history .left .txt .tit {
+        font-size: 24px;
+    }
     .brand_history .txt p {
         font-size: 18px;
     }
