--- a/css/about.css
+++ b/css/about.css
@@ -1042,6 +1042,7 @@ section {
     font-size: clamp(30px, 4vw, 60px);
     font-weight: 600;
     letter-spacing: -2px;
+    user-select: all;
 }
 
 #contact .cont_txt .top .cont h6 {
