--- a/css/main.css
+++ b/css/main.css
@@ -132,8 +132,10 @@ section {
     opacity: 0;
     z-index: 99;
     pointer-events: none;
-  }
-  .ufobig {
+}
+
+.ufobig {
+
     position: fixed;
     top: -100%;
     left: 60%;
@@ -141,6 +143,11 @@ section {
     z-index: 999;
     opacity: 0;
     pointer-events: none;
+}
+
+.ufobig img {
+    width: clamp(300px, 30vw, 700px);
+    height: auto;
 }
 
 #about {
@@ -169,6 +176,8 @@ section {
 }
 
 #about .bg .ufo {
+    width: clamp(400px, 40vw, 600px);
+    height: auto;
     position: absolute;
     z-index: 10;
     filter: drop-shadow(-20px 0 25px rgba(255, 255, 255, 0.5));
@@ -176,29 +185,31 @@ section {
     right: -40%;
     transform: scale(0.7);
     animation:
-    ufoFlyBackAndForth 5s ease-in-out infinite alternate,
-    ufoShake 0.8s ease-in-out infinite alternate;
+        ufoFlyBackAndForth 5s ease-in-out infinite alternate,
+        ufoShake 0.8s ease-in-out infinite alternate;
 }
 
 /* 왕복 이동 애니메이션 */
 @keyframes ufoFlyBackAndForth {
     0% {
-      right: -40%;
+        right: -40%;
     }
+
     100% {
-      right: 100%;
+        right: 100%;
     }
-  }
-  
-  /* 흔들림 애니메이션 */
-  @keyframes ufoShake {
+}
+
+/* 흔들림 애니메이션 */
+@keyframes ufoShake {
     0% {
-      transform: scale(0.7) rotate(0deg) translateY(0);
+        transform: scale(0.7) rotate(0deg) translateY(0);
     }
+
     100% {
-      transform: scale(0.7) rotate(5deg) translateY(10px);
+        transform: scale(0.7) rotate(5deg) translateY(10px);
     }
-  }
+}
 
 
 #about .bg .star {
