--- a/tgif/css/brandstory.css
+++ b/tgif/css/brandstory.css
@@ -10,6 +10,8 @@ body.no-scroll {
     overflow: hidden;
 }
 
+
+
 .wrap {
 /*     overflow: hidden; */
     position: relative;
@@ -173,6 +175,7 @@ h1 a img{
 
 .bannner .tit p {
     font-weight: 500;
+    line-height: 150%;
 }
 
 .bannner .txt>p {
@@ -280,12 +283,14 @@ main .history{
     color: #666;
     font-size: 22px;
     line-height: 1.2em;
+    line-height: 160%;
 }
 
 #welcome .con .txt .p .red {
     color: var(--main-color);
     margin-top: 30px;
     font-weight: 600;
+       line-height: 160%;
 }
 
 #welcome .con .img_box {
@@ -376,10 +381,12 @@ main .history{
 .brand_history .txt .tit {
     font-size: 40px;
     font-weight: 500;
+    line-height: 125%;
 }
 
 .brand_history .txt p {
     font-size: 20px;
+    line-height: 160%;
 }
 
 
