--- a/css/about.css
+++ b/css/about.css
@@ -597,9 +597,7 @@ section {
     /*     justify-content: center;
     align-items: flex-start; */
     /*     gap: 5vh; */
-    min-height: 100vh;
-    width: 5000px;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 #work .tit {
@@ -621,6 +619,8 @@ section {
     /*   margin-left: 2vw; */
     will-change: transform;
     transform-style: preserve-3d;
+     transform: translate3d(0, 0, 0); 
+     will-change: transform;
 }
 
 #work .horizontal-wrapper .workli {
