--- a/css/about_media.css
+++ b/css/about_media.css
@@ -125,7 +125,7 @@
 
 
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1030px) {
     #contact {
         height: 80vh;
     }
@@ -156,6 +156,16 @@
         flex-wrap: wrap;
         width: 100%;
         padding: 0;
+    }
+
+    #work .horizontal-wrapper .workli{
+        height: clamp(250px,46vh,360px);
+        display: flex;
+        flex-direction: column;
+    }
+
+    #work .horizontal-wrapper .workli .top{
+        flex: 1;
     }
 
     #work .horizontal-wrapper .workli .top h4 {
@@ -227,6 +237,8 @@
 
     #work .horizontal-wrapper .workli {
         width: 80vw;
+        height: auto;
+        display: block;
     }
 
     #work .horizontal-wrapper .workli .top {
